@@ -1,3 +1,8 @@
+2009-10-06  Tristan Gingold  <gingold@adacore.com>
+
+	* darwin-nat.c: Add __TEXT __info_plist content.
+	(darwin_attach_pid): Update error message.
+
 2009-10-04  Pedro Alves  <pedro@codesourcery.com>
 
 	* NEWS: Mention non-stop mode.
